@@ -373,6 +373,7 @@ repl call, 0x5B9E54,	0x5C892B,	0x5B9B64,	"Map_get_tile_for_fow_status_check",		"
 define,	   0x578780,	0x5858A0,	0x5786F0,	"Navigator_Data_reset",				"void (__fastcall *) (Navigator_Data * this)"
 inlead,	   0x536080,	0x540670,	0x536100,	"initialize_map_music",				"void (__cdecl *) (int civ_id, int era_id, byte param_3)"
 inlead,	   0x535FB0,	0x5405A0,	0x536030,	"deinitialize_map_music",			"void (__stdcall *) ()"
+inlead,	   0x5C3510,	0x5D2140,	0x5C3220,	"Unit_check_bombard_target",			"byte (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
