@@ -58,6 +58,11 @@ city_icons_show_unit_effects_not_trade = true
 ; majority of them do not enable air trade. This option can improve turn times very significantly in some circumstances.
 optimize_improvement_loops = true
 
+; The game rules do not permit aircraft in an airfield to be damaged by bombardment. The interface allows players to order such bombardments anyway
+; since its logic to check target validity is incomplete. This option completes the logic, causing the interface to reject attempts to bombard an
+; airfield which would have no effect.
+disallow_useless_bombard_vs_airfields = true
+
 [=======================]
 [=== AI ENHANCEMENTS ===]
 [=======================]
