@@ -1,3 +1,5 @@
+- Disallow useless bombard attacks vs airfields
+
 * RELEASE 16 PREVIEW 2
 - Option to share visibility among all human players in a hotseat game
 - Limit AI artillery units to one escort (w/ offensive artillery AI)
